--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,10 @@
+# Arquivo: netlify.toml - VERSÃO FINAL CORRIGIDA
+
 # Configuração geral para todas as funções
 [functions]
   directory = "netlify/functions"
 
-# Configuração específica para a função "groq"
+# Configuração específica para a função "groq" para evitar timeout
+# Aumenta o tempo limite de execução para 25 segundos (o máximo seguro é 26)
 [functions.groq]
-  # Aumenta o tempo limite de execução para 25 segundos (o máximo seguro é 26)
   timeout = 25
-=======
-# Arquivo: netlify.toml
-[functions]
-  directory = "netlify/functions"
